--- a/Splashy/Contexts/Game Over/GameOverView.xib
+++ b/Splashy/Contexts/Game Over/GameOverView.xib
@@ -10,12 +10,18 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="YIKES!__.TTF">
+            <string>Yikes</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameOverView" customModule="Splashy" customModuleProvider="target">
             <connections>
                 <outlet property="containerView" destination="lxo-iJ-LYq" id="y5G-gg-CXZ"/>
                 <outlet property="recordButton" destination="5ui-rK-irh" id="pmZ-vy-Ui5"/>
                 <outlet property="retryButton" destination="ruT-aq-u89" id="rvH-7u-ld1"/>
+                <outlet property="scoreLabel" destination="mD3-Lx-goy" id="1CV-cT-lOh"/>
                 <outlet property="tutorialButton" destination="Wf3-Cl-J3k" id="e4y-GX-QRx"/>
             </connections>
         </placeholder>
@@ -25,12 +31,12 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lxo-iJ-LYq">
-                    <rect key="frame" x="16" y="16" width="343" height="279.5"/>
+                    <rect key="frame" x="16" y="16" width="343" height="283.5"/>
                     <subviews>
                         <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H7A-2Q-5rn">
-                            <rect key="frame" x="0.0" y="0.0" width="343" height="279.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="343" height="283.5"/>
                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="LDE-Z4-DuW">
-                                <rect key="frame" x="0.0" y="0.0" width="343" height="279.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="343" height="283.5"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </view>
                             <blurEffect style="light"/>
@@ -42,21 +48,23 @@
                             </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="wRv-gD-aQh">
-                            <rect key="frame" x="129.5" y="187.5" width="84" height="60"/>
+                            <rect key="frame" x="115" y="187.5" width="114.5" height="64"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mD3-Lx-goy">
-                                    <rect key="frame" x="0.0" y="0.0" width="59" height="60"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                    <nil key="textColor"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="63.5" height="64"/>
+                                    <fontDescription key="fontDescription" name="Yikes" family="Yikes!" pointSize="60"/>
+                                    <color key="textColor" red="0.84313725490000002" green="0.3294117647" blue="0.1058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="score-ruby" translatesAutoresizingMaskIntoConstraints="NO" id="NtR-Ea-XrP">
-                                    <rect key="frame" x="59" y="17.5" width="25" height="25"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" secondItem="NtR-Ea-XrP" secondAttribute="height" multiplier="1:1" id="Vvi-ob-lfo"/>
-                                        <constraint firstAttribute="height" constant="25" id="ilO-5A-qaT"/>
-                                    </constraints>
-                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="points" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eVD-oQ-Czh">
+                                    <rect key="frame" x="63.5" y="21.5" width="51" height="21.5"/>
+                                    <fontDescription key="fontDescription" name="Yikes" family="Yikes!" pointSize="20"/>
+                                    <color key="textColor" red="0.84313725490000002" green="0.3294117647" blue="0.1058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                    <color key="shadowColor" red="0.84313725490000002" green="0.3294117647" blue="0.1058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
+                                </label>
                             </subviews>
                         </stackView>
                     </subviews>
@@ -75,7 +83,7 @@
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5IT-H9-hSj">
-                    <rect key="frame" x="119" y="275.5" width="136" height="40"/>
+                    <rect key="frame" x="119" y="279.5" width="136" height="40"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ruT-aq-u89" customClass="StandardButton" customModule="Splashy" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -130,6 +138,5 @@
     </objects>
     <resources>
         <image name="gfx-newRecord" width="2524" height="1217"/>
-        <image name="score-ruby" width="32" height="31"/>
     </resources>
 </document>
