--- a/Splashy/Contexts/Game/GameViewController.xib
+++ b/Splashy/Contexts/Game/GameViewController.xib
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameViewController" customModule="Splashy" customModuleProvider="target">
             <connections>
                 <outlet property="scoreView" destination="G7q-B3-oPa" id="UVv-CD-n79"/>
+                <outlet property="scoreViewTopConstraint" destination="SZm-qn-d0F" id="Yku-yV-hvH"/>
                 <outlet property="spriteKitView" destination="RT5-Uz-Ght" id="Rlo-f7-vGl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
