--- a/Splashy/Contexts/Home/HomeViewController.xib
+++ b/Splashy/Contexts/Home/HomeViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,6 +16,9 @@
                 <outlet property="backgroundImageView" destination="zrW-Jh-RR2" id="Sxl-cD-wvj"/>
                 <outlet property="buttonsStackView" destination="kSH-8q-o74" id="j2H-Oa-CXy"/>
                 <outlet property="logoImageView" destination="7or-Pb-Nv9" id="NeC-dX-GgC"/>
+                <outlet property="playButton" destination="xhG-FP-ur3" id="eoQ-hL-hDH"/>
+                <outlet property="recordsButton" destination="uxV-xY-umP" id="vI6-06-Nyy"/>
+                <outlet property="tutorialButton" destination="diV-mb-7sE" id="qGJ-WJ-dBM"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outletCollection property="actionButtons" destination="xhG-FP-ur3" collectionClass="NSMutableArray" id="rQx-jJ-zfU"/>
                 <outletCollection property="actionButtons" destination="diV-mb-7sE" collectionClass="NSMutableArray" id="8Rn-EI-nhO"/>
@@ -45,7 +48,7 @@
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="kSH-8q-o74">
-                    <rect key="frame" x="140" y="254" width="40" height="40"/>
+                    <rect key="frame" x="116" y="254" width="88" height="40"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xhG-FP-ur3" customClass="StandardButton" customModule="Splashy" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -60,7 +63,7 @@
                             </connections>
                         </button>
                         <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="diV-mb-7sE" customClass="StandardButton" customModule="Splashy" customModuleProvider="target">
-                            <rect key="frame" x="-140" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="44" y="0.0" width="40" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="diV-mb-7sE" secondAttribute="height" multiplier="1:1" id="yWW-w7-fdz"/>
                             </constraints>
@@ -68,8 +71,8 @@
                                 <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </state>
                         </button>
-                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uxV-xY-umP" customClass="StandardButton" customModule="Splashy" customModuleProvider="target">
-                            <rect key="frame" x="-140" y="0.0" width="40" height="40"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uxV-xY-umP" customClass="StandardButton" customModule="Splashy" customModuleProvider="target">
+                            <rect key="frame" x="48" y="0.0" width="40" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="uxV-xY-umP" secondAttribute="height" multiplier="1:1" id="lub-u5-Kkt"/>
                             </constraints>
