--- a/Splashy/Contexts/Game Over/GameOverView.xib
+++ b/Splashy/Contexts/Game Over/GameOverView.xib
@@ -21,6 +21,7 @@
                 <outlet property="containerView" destination="lxo-iJ-LYq" id="y5G-gg-CXZ"/>
                 <outlet property="recordButton" destination="5ui-rK-irh" id="pmZ-vy-Ui5"/>
                 <outlet property="retryButton" destination="ruT-aq-u89" id="rvH-7u-ld1"/>
+                <outlet property="scoreDescriptionLabel" destination="eVD-oQ-Czh" id="gVA-Xc-9WH"/>
                 <outlet property="scoreLabel" destination="mD3-Lx-goy" id="1CV-cT-lOh"/>
                 <outlet property="scoreStateImageView" destination="IyY-F8-jPJ" id="V9S-MW-btt"/>
                 <outlet property="tutorialButton" destination="Wf3-Cl-J3k" id="e4y-GX-QRx"/>
@@ -37,7 +38,7 @@
                         <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H7A-2Q-5rn">
                             <rect key="frame" x="0.0" y="0.0" width="343" height="283.5"/>
                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="LDE-Z4-DuW">
-                                <rect key="frame" x="0.0" y="0.0" width="343" height="283.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="343" height="283"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </view>
                             <blurEffect style="light"/>
