Started Implementing the RecordsView.

--- a/Splashy/Contexts/Records/RecordsViewController.xib
+++ b/Splashy/Contexts/Records/RecordsViewController.xib
@@ -1,13 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RecordsViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RecordsViewController" customModule="Splashy" customModuleProvider="target">
             <connections>
+                <outlet property="recordsViewContainer" destination="YW0-dp-FWJ" id="bha-KY-5Np"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,8 +21,23 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <subviews>
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YW0-dp-FWJ">
+                    <rect key="frame" x="32" y="136.5" width="311" height="414"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="YW0-dp-FWJ" secondAttribute="height" multiplier="3:4" priority="750" id="dfN-hi-ZLR"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <constraints>
+                <constraint firstItem="YW0-dp-FWJ" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="BIe-Qa-bnf"/>
+                <constraint firstItem="YW0-dp-FWJ" firstAttribute="width" secondItem="YW0-dp-FWJ" secondAttribute="height" multiplier="3:4" priority="750" id="Gfj-CD-XUp"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="YW0-dp-FWJ" secondAttribute="trailing" constant="32" id="PRB-Jy-WDX"/>
+                <constraint firstItem="YW0-dp-FWJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="32" id="TRd-nb-qmd"/>
+                <constraint firstItem="YW0-dp-FWJ" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="beZ-hg-I7J"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="-352" y="30"/>
         </view>
     </objects>
 </document>
